<resources>
    <string name="app_name">My_voicepoint_newsapp</string>
    <string name="footer_text">UOC|FOT</string>
    <string name="app_logo">App Logo</string>

    <string name="app_logo1">App Logo</string>
    <string name="app_subtitle">Real Time Updates of FOT</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signin_title">Sign In</string>

    <string name="app_logo_desc">App Logo</string>
</resources>