<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80A850C5"
    tools:context=".SignUpActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="74dp"
        android:layout_height="87dp"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo_desc" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="227dp"
        android:layout_height="23dp"
        android:layout_below="@id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Real Time Updates of FOT"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium" />

    <!-- Tab Layout -->
    <!-- Tab Container -->
    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="412dp"
        android:layout_height="48dp"
        android:layout_marginTop="219dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:background="@drawable/rounded_tab_container">

        <!-- Sign In Tab (inactive) -->
        <Button
            android:id="@+id/signInTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="20sp"
            android:fontFamily="sans-serif" />

        <!-- Sign Up Tab (active) -->
        <Button
            android:id="@+id/signUpTab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_tab_active"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="20sp"
            android:fontFamily="sans-serif" />
    </LinearLayout>


    <!-- Form Container -->
    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="489dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_container"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="Sign Up"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Username -->
        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="56dp"
            android:background="@drawable/rounded_textfield"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_user"
                app:tint="#7B6B6B" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:hint="User Name"
                android:textColor="#000000"
                android:textColorHint="#7B6B6B"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Email -->
        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="56dp"
            android:background="@drawable/rounded_textfield"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/email"
                app:tint="#7B6B6B" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="Email"
                android:textColor="#000000"
                android:inputType="textEmailAddress"
                android:textColorHint="#7B6B6B"
                android:textSize="20sp"
                android:background="@null" />
        </LinearLayout>

        <!-- Password -->
        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="56dp"
            android:background="@drawable/rounded_textfield"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/password"
                app:tint="#7B6B6B" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColorHint="#7B6B6B"
                android:textColor="#000000"
                android:textSize="20sp"
                android:background="@null" />
        </LinearLayout>

        <!-- Confirm Password -->
        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="56dp"
            android:background="@drawable/rounded_textfield"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/confirm_password"
                app:tint="#7B6B6B" />

            <EditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:hint="Confirm Password"
                android:textColor="#000000"
                android:inputType="textPassword"
                android:textColorHint="#7B6B6B"
                android:textSize="20sp"
                android:background="@null" />
        </LinearLayout>

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="296dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:text="Sign Up"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
